[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["safecorners <safecorners.mobile@gmail.com>"]
readme = "README.md"
packages = [{include = "todos", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
